documentation/versioned_docs/version-3.2.0/understanding/introduction/index.md
---
sidebar_position: 1
title: Introduction
---

## What is the Storage Service?

The Storage Service is a simple, secure way to store and retrieve data and files. You choose whether your data is **public** (anyone with the link can read it) or **private** (automatically encrypted so that only the key holder can access it).

## Origin

Originally developed as part of the United Nations Transparency Protocol (UNTP) reference implementation, the Storage Service is a general-purpose solution suitable for any application that needs secure document and file storage.

## Key Capabilities

- **Store data publicly or privately** -- choose the right level of protection for each piece of content.
- **Automatic encryption for private data** -- the service handles encryption for you; no cryptographic expertise required.
- **Multiple cloud storage backends** -- deploy with AWS S3, Google Cloud Storage, or any S3-compatible provider.
- **Data integrity verification** -- every stored item receives a unique hash fingerprint, so you can confirm your data has not been tampered with.
- **Simple REST API** -- a straightforward interface that developers can integrate with in minutes.

## Where to Go Next

- To understand how public and private storage work, read [How It Works](../how-it-works).
- To start integrating with the API, see the [Developer Guide](../../developer-guide/api-reference).
- To deploy the service, see the [Deployment Guide](../../deployment-guide/installation).
